[package]
name = "runelite-cosmetic-network"
version = "0.1.0"
authors = ["John Westhoff <johnjwesthoff@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "0.12"
lazy_static = "1.4.0"
regex = "1"
[dependencies.rusqlite]
version = "0.25.1"
features = ["bundled"]