[package]
name = "runelite-cosmetic-network"
version = "0.1.0"
authors = ["John Westhoff <johnjwesthoff@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "throughput_tester"
path = "src/throughput_tester.rs"

[dependencies]
actix-web = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "0.12"
[dependencies.rusqlite]
version = "0.25.1"
features = ["bundled", "vtab", "array"]
[dependencies.reqwest]
version = "0.11.3"
features = ["blocking"]